pilot_docustore/database/manifests/mongo-statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: mongodb
spec:
  selector:
    matchLabels:
      app: mongodb
  serviceName: mongodb
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  template:
    metadata:
      labels:
        app: mongodb
    spec:
      securityContext:
        runAsUser: 1000
        runAsGroup: 3000
        fsGroup: 2000
      serviceAccountName: mongodb-sa # map to non-default
      containers:
        - name: mongodb
          image: mongo:4.4@sha256:8ab20427ed105fa910e29682ecf3226bff2962db1779e0422ea473750be50e7c
          resources:
            requests:
              memory: "250Mi"
              cpu: "250m"
            limits:
              memory: "500Mi"
              cpu: "0.5"
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongodb-persistent-storage
              mountPath: /data/db
          securityContext:
            capabilities:
              add:
                - NET_BIND_SERVICE
  volumeClaimTemplates:
    - metadata:
        name: mongodb-persistent-storage
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: azure-disk
        resources:
          requests:
            storage: 5Gi
