pilot_docustore/database/manifests/mongo-basic.yaml
apiVersion: v1
kind: Service
metadata:
  name: mongodb
  labels:
    app: mongodb
spec:
  selector:
    app: mongodb
  ports:
    - name: mongodb
      port: 27017
      targetPort: 27017
  type: ClusterIP
---
apiVersion: v1
kind: Pod
metadata:
  name: mongodb
  namespace: mongo
  labels:
    app: mongodb
spec:
  containers:
    - name: mongodb
      image: mongo:4.4
      resources:
        requests:
          memory: "250Mi"
          cpu: "250m"
        limits:
          memory: "500Mi"
          cpu: "0.5"
      ports:
        - containerPort: 27017
      volumeMounts:
        - name: data
          mountPath: /data/db
  volumes:
    - name: data
      emptyDir: {}
