pilot_docustore/database/manifests/network_pol.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-from-docustore
spec:
  podSelector: {} # this allows all
  policyTypes:
  - Ingress  
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          kubernetes.io/metadata.name: docustore
